--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "partials/params";
 @import "partials/mixins";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 @import "../../node_modules/font-awesome/scss/font-awesome";
 
 html, body {
